--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.0.10",
     "jsbarcode": "^3.11.6",
     "jspdf": "^2.5.1",
+    "mdb-react-ui-kit": "^8.0.0",
     "nodemailer": "^6.9.13",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
